[project]
name = "review-roadmap"
version = "0.1.0"
description = "A CLI tool to generate a roadmap for reviewing GitHub Pull Requests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.10",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "respx>=0.21.0"
]

[project.scripts]
roadmap = "review_roadmap.main:app"

[tool.hatch.build.targets.wheel]
packages = ["review_roadmap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
